@@ -33,7 +33,7 @@ Build-Depends: dbus <!nocheck>,
                xsltproc,
                xterm <!nocheck>,
                zlib1g-dev
-Build-Depends-Indep: gtk-doc-tools (>= 1.32.1),
+#Build-Depends-Indep: gtk-doc-tools (>= 1.32.1),
 Rules-Requires-Root: no
 Standards-Version: 4.5.1
 Homepage: https://wiki.gnome.org/Projects/GLib
@@ -184,16 +184,16 @@ Description: Common files for GLib library
  This package is needed for the runtime libraries to display messages in
  languages other than English.
 
-Package: libglib2.0-doc
-Section: doc
-Architecture: all
-Depends: ${misc:Depends}
-Suggests: devhelp
-Multi-Arch: foreign
-Description: Documentation files for the GLib library
- GLib is a library containing many useful C routines for things such
- as trees, hashes, lists, and strings.  It is a useful general-purpose
- C library used by projects such as GTK+, GIMP, and GNOME.
- .
- This package contains the HTML documentation for the GLib library
- in /usr/share/doc/libglib2.0-doc/ .
+#Package: libglib2.0-doc
+#Section: doc
+#Architecture: all
+#Depends: ${misc:Depends}
+#Suggests: devhelp
+#Multi-Arch: foreign
+#Description: Documentation files for the GLib library
+# GLib is a library containing many useful C routines for things such
+# as trees, hashes, lists, and strings.  It is a useful general-purpose
+# C library used by projects such as GTK+, GIMP, and GNOME.
+# .
+# This package contains the HTML documentation for the GLib library
+# in /usr/share/doc/libglib2.0-doc/ .
